# my-site

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
app/: main.py
app/core/: __init__.py  db.py  paths.py  settings.py  templates.py
app/models/: base.py  post.py
app/static/: manifest.webmanifest
app/static/css/: about.css  post.css  post_detail.css  site.css
app/templates/: about.html  base.html  index.html  post_detail.html
app/templates/home/: index.html
migrations/: env.py
migrations/versions/: 7a6149a23ebc_init.py
tests/: test_main.py
tests/pages/: test_about.py  test_home.py  test_post.py
